<resources>
    <string name="app_name">FlujoTrabajo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="clientes">Clientes</string>
    <string name="acuerdos">Acuerdos</string>
    <string name="precios">Precios</string>
    <string name="capturar_precio">Capturar precio</string>
    <string name="codigo_barras">Código de barras</string>
    <string name="nombre_articulo">Nombre articulo</string>
    <string name="precio">Precio</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="contenido_del_producto">Contenido del producto</string>

    <!-- Arreglos de los tabs-->
    <array name="tabs_img">
        <item>@drawable/ic_clientes</item>
        <item>@drawable/ic_precios</item>
    </array>

    <string-array name="tabs_name">
        <item>@string/clientes</item>
        <item>@string/acuerdos</item>
    </string-array>

    <string name="cliente_selecionado">Cliente selecionado:</string>

</resources>
