<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/CrearMargenes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_agregar_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/capturar_precio"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cod_barras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_text_cod_barras"
                    style="@style/CrearMargenes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_barras" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nom_articulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_nomb_articulo"
                    style="@style/CrearMargenes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_articulo" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_precio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_edit_text_precio"
                        style="@style/CrearMargenes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/precio" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_contenido"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_edit_text_contenido"
                        style="@style/CrearMargenes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contenido_del_producto" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <Spinner
                style="@style/CrearMargenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    style="@style/EstiloBotones"
                    android:elevation="9dp"
                    android:shadowDx="3"
                    android:textAllCaps="false"
                    android:text="@string/cancelar"
                    android:id="@+id/btn_descartar_precio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    style="@style/EstiloBotones"
                    android:text="@string/guardar"
                    android:elevation="9dp"
                    android:textAllCaps="false"
                    android:shadowDx="3"
                    android:id="@+id/btn_guardar_precio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>